# ChangeLog for app-xemacs/mh-e
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/mh-e/ChangeLog,v 1.22 2011/07/22 11:25:00 xarthisius Exp $

*mh-e-1.33 (17 Jul 2013)

  17 Jul 2013; Mats Lidell <matsl@gentoo.org> +metadata.xml, +mh-e-1.33.ebuild:
  Upstream experimental version bump and use EAPI=5
