@@ -1,6 +1,11 @@
 # ChangeLog for app-xemacs/mh-e
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/mh-e/ChangeLog,v 1.22 2011/07/22 11:25:00 xarthisius Exp $
+
+*mh-e-1.35 (11 Jul 2014)
+
+  11 Jul 2014; Mats Lidell <matsl@gentoo.org> +mh-e-1.35.ebuild:
+  Pre release version bump
 
 *mh-e-1.33 (17 Jul 2013)
 
